# framework

./: Makefile  Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.ac  env.sh  global.mk  test.cc  thrift  zeromq
3rd/: glog
3rd/glog-0.3.3/: configure.scan
3rd/glog-0.3.3/autom4te.cache/: requests  traces.0
3rd/glog-0.3.3/src/: logging.cc
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
config/: plugin.xml
container/: Makefile  PluginContainer.cpp  PluginContainer.h  SharedObject.cc  SharedObject.cpp  SharedObject.h  SharedObject.hh
controller/: Makefile  PluginParser.cc  PluginParser.cpp  PluginParser.hh  test.cc  test.cpp
core/: Makefile.am  Makefile.in  config.h.in  configure  configure.ac
core/autom4te.cache/: output.0  requests  traces.0  traces.1
core/config/: config.ini
core/src/BasicUnitTest/: Makefile.in  main.cpp
core/src/BasicUnitTest/exception/: Makefile.am  Makefile.in
core/src/BasicUnitTest/utility/: Makefile.am  Makefile.in
core/src/container/: Makefile.am  Makefile.in  PluginContainer.cpp
core/src/controller/: Makefile.in  PluginParser.cpp
core/src/exception/: Makefile.in  StandardException.h
core/src/glog/: GLog.cpp  Makefile.am  Makefile.in
core/src/manager/: Makefile.am  Makefile.in
core/src/plugin/: Makefile.in  PluginBridge.h
core/src/requestqueue/: Makefile.in  RequestQueue.h
core/src/sharedobject/: Makefile.in
core/src/test/: Makefile.am  Makefile.in
core/src/thread/: Makefile.am
core/src/thrift/: Makefile.am  Makefile.in  PluginServant.thrift
core/src/thrift/gen-cpp/: PluginManagerServant.cpp  PluginManagerServant.h  PluginManagerServant_constants.cpp  PluginManagerServant_types.cpp  PluginManagerServant_types.h
core/src/thrift/gen-py/PluginServant/: __init__.py
core/src/tinyxml2/: Makefile.am  Makefile.in
core/src/utility/: Makefile.am  Makefile.in  System.cpp  System.h
glog-0.3.3/autom4te.cache/: requests
glog-0.3.3/src/: utilities.cc
plugin/: Makefile  Plugin.cpp  Plugin.h  PluginBridge.cpp  PluginBridge.h  Plugin_server.skeleton.cpp  plugin.hh  plugin.thrift  plugin_constants.cpp  plugin_constants.h  plugin_types.cpp  plugin_types.h  test.cc  test.h  test.hh
plugin2/: Makefile  test.cpp
requestqueue/: Makefile  RequestQueue.cpp  RequestQueue.h
sharedobject/: Makefile  SharedObject.h
src/BasicUnitTest/: Makefile.am  Makefile.in
src/BasicUnitTest/exception/: Makefile.am  Makefile.in  testStandardException.cpp
src/BasicUnitTest/utility/: Makefile.am  Makefile.in  testConfiguration.cpp
src/container/: Makefile.am  Makefile.in  PluginContainer.cpp
src/controller/: Makefile.am  Makefile.in  PluginParser.cpp  PluginParser.h  test.cpp
src/exception/: Makefile.am  Makefile.in  StandardException.cpp
src/glog/: GLog.cpp  GLog.h  Makefile.am  Makefile.in
src/manager/: Makefile.am  Makefile.in  PluginManagerMain.cpp  PluginManagerServer.cpp  PluginManagerServer.h
src/plugin/: Makefile.am  Makefile.in  Plugin.cpp  PluginBridge.cpp
src/requestqueue/: Makefile.am  Makefile.in
src/sharedobject/: Makefile.am  Makefile.in  SharedObject.cpp
src/test/: Makefile.am  Makefile.in
src/thread/: Makefile.in
src/thrift/: Makefile.am  Makefile.in  PluginManagerServant.thrift  testPlugin.py
src/thrift/gen-cpp/: PluginManagerServant_constants.h  PluginServant.cpp  PluginServant_types.cpp
src/tinyxml2/: Makefile.in
src/utility/: Configuration.cpp  Configuration.h  Makefile.in
test/: Makefile  PluginHandler.cpp  PluginHandler.h
thread/: Makefile  Thread.cpp  Thread.h
thrift/: Makefile  plugin.thrift
thrift-0.9.1/: configure.scan
thrift-0.9.1/autom4te.cache/: output.0  output.1  output.3  output.4  requests  traces.0  traces.1  traces.2  traces.3  traces.4
thrift-0.9.1/lib/cpp/test/: tests.xml
thrift-0.9.1/test/gen-html/: ThriftTest.html  index.html
thrift/gen-cpp/: PluginServant.h  PluginServant_constants.cpp  PluginServant_constants.h  PluginServant_server.skeleton.cpp  PluginServant_types.h
thrift/gen-py/PluginServant/: PluginServant-remote  PluginServant.py
tinyxml2/: Makefile
tool/confparser/: confparser.hpp
tool/tinyxml2/: Makefile
