ACLOCAL_AMFLAGS = -I m4

AUTOMAKE_OPTIONS=foreign

SUBDIRS = src/tinyxml2 \
          src/exception \
          src/thrift \
          src/thread \
          src/requestqueue \
          src/sharedobject \
          src/plugin \
          src/container \
          src/test \
          src/controller \
          src/glog \
          src/manager

SUBDIRS+=3rd/glog

EXTRA_DIST = config
