AUTOMAKE_OPTIONS=foreign

lib_LTLIBRARIES=libsealthrift.la

INCLUDES=-I${SEAL_HOME}/thrift/include

libsealthrift_la_SOURCES= \
                          gen-cpp/PluginServant.cpp \
                          gen-cpp/PluginServant.h \
                          gen-cpp/PluginServant_constants.cpp \
                          gen-cpp/PluginServant_constants.h \
                          gen-cpp/PluginServant_types.cpp \
                          gen-cpp/PluginServant_types.h

