AUTOMAKE_OPTIONS=foreign

lib_LTLIBRARIES=libsealthrift.la

INCLUDES=-I${SEAL_HOME}/thrift/include

libsealthrift_la_SOURCES= \
                          gen-cpp/PluginServant.cpp \
                          gen-cpp/PluginServant.h \
                          gen-cpp/PluginServant_constants.cpp \
                          gen-cpp/PluginServant_constants.h \
                          gen-cpp/PluginServant_types.cpp \
                          gen-cpp/PluginServant_types.h \
                          gen-cpp/PluginManagerServant.cpp \
                          gen-cpp/PluginManagerServant.h \
                          gen-cpp/PluginManagerServant_constants.cpp \
                          gen-cpp/PluginManagerServant_constants.h \
                          gen-cpp/PluginManagerServant_types.cpp \
                          gen-cpp/PluginManagerServant_types.h

